Fixed overflow for entire website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
